[package]
name = "hippo-swap"
version = "0.1.0"
authors = ["hippo.space"]
repository = "https://github.com/hippo.space"
homepage = "https://hippo.space"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
aptos-vm = { git = "https://github.com/aptos-labs/aptos-core.git", subpath = "aptos-move/aptos-vm" }
aptos-types = { git = "https://github.com/aptos-labs/aptos-core.git", subpath = "types"}
aptos-workspace-hack = { git = "https://github.com/aptos-labs/aptos-core.git", subpath = "crates/aptos-workspace-hack" }
clap = "3.1.8"
move-compiler = { git = "https://github.com/move-language/move", rev = "f2e7585b1ed5bd2810163d6bdebafe5a388881d3" }
move-package = { git = "https://github.com/move-language/move", rev = "f2e7585b1ed5bd2810163d6bdebafe5a388881d3" }
move-stdlib = { git = "https://github.com/move-language/move", rev = "f2e7585b1ed5bd2810163d6bdebafe5a388881d3" }
move-unit-test = { git = "https://github.com/move-language/move", rev = "f2e7585b1ed5bd2810163d6bdebafe5a388881d3", features=["table-extension"] }
move-coverage = { git = "https://github.com/move-language/move", rev = "f2e7585b1ed5bd2810163d6bdebafe5a388881d3" }

[dev-dependencies]
move-cli = { git = "https://github.com/move-language/move", rev = "f2e7585b1ed5bd2810163d6bdebafe5a388881d3" }
tempfile = "3.2.0"
